--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngrx/schematics": "^8.3.0",
     "@ngrx/store": "^8.3.0",
     "@ngrx/store-devtools": "^8.3.0",
+    "bootstrap": "^4.3.1",
     "ngx-toastr": "^10.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
