--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -20,7 +21,9 @@
     "@angular/material": "^8.1.4",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
+    "@angular/pwa": "^0.803.2",
     "@angular/router": "~8.2.0",
+    "@angular/service-worker": "~8.2.0",
     "@ngrx/devtools": "^1.4.0",
     "@ngrx/effects": "^8.3.0",
     "@ngrx/entity": "^8.3.0",
